syntax = "proto3";

package configproto;

message ServerConfig {
    bytes push_certificate = 1;
    bytes push_certificate_key = 2;
}

